cmake_minimum_required(VERSION 3.5)

add_subdirectory(lib)
add_subdirectory(basic-sample/network-basic-common)
add_subdirectory(basic-sample/network-basic-server)
add_subdirectory(basic-sample/network-basic-user)
add_subdirectory(sample/network-common)
add_subdirectory(sample/network-server)
add_subdirectory(sample/network-user)
